# ai_safety_devices_manager

./: .gitignore  CMakeLists.txt  README.md  main_test.cpp
application/: CMakeLists.txt
application/include/ai_safety_controller/: devices_manager_client.hpp  interface.hpp
application/src/: devices_manager_client.cpp  interface.cpp
config/: common_config.json  common_config_sim.json
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/include/ai_safety_controller/common/: device_status.hpp  gateway_serial.hpp  status.hpp
core/drivers/battery/include/battery/: battery_core.hpp
core/drivers/battery/src/: battery_core.cpp
core/drivers/hoist_hook/include/hoist_hook/: hoist_hook_core.hpp
core/drivers/hoist_hook/src/: hoist_hook_core.cpp
core/drivers/io_relay/include/io_relay/: io_relay_core.hpp
core/drivers/io_relay/src/: io_relay_core.cpp
core/drivers/multi_turn_encoder/include/multi_turn_encoder/: multi_turn_encoder_core.hpp
core/drivers/multi_turn_encoder/src/: multi_turn_encoder_core.cpp
core/drivers/solar/include/solar/: solar_core.hpp
core/drivers/solar/src/: solar_core.cpp
core/drivers/spd_lidar/include/spd_lidar/: spd_lidar_core.hpp
core/drivers/spd_lidar/src/: spd_lidar_core.cpp
core/sensor_factory/: CMakeLists.txt
core/sensor_factory/include/ai_safety_controller/sensor_factory/: sensor_factory.hpp
core/sensor_factory/src/: sensor_factory.cpp
demo/: CMakeLists.txt  ai_safety_controller_demo.cpp
doc/: main_test_guide.md  main_test_测试说明.md
tool/: hoist_hook_rtu_sim.py  hoist_hook_tcp_sim.py  modbus_gateway_sim.py  multi_turn_encoder_rtu_sim.py  multi_turn_encoder_tcp_sim.py  run_all_sims.sh  spd_lidar_dual_sim.py
